<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@color/material_blue_grey_800">

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="date"
        android:hint="@string/user_date_edit_text"
        android:layout_centerHorizontal="true"
        android:id="@+id/editText"
        android:autoText="false"
        android:textColor="#fffffbfd" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:inputType="textPersonName"
        android:hint="@string/hint_text_name"
        android:id="@+id/editTextName"
        android:autoText="false"
        android:textColor="#fffffbfd"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendly_text"
        android:onClick="onOkButtonClick"
        android:id="@+id/ok_button"
        android:background="#ff7d76ff"
        android:layout_below="@+id/editTextName"
        android:layout_alignRight="@+id/editTextName"
        android:layout_alignEnd="@+id/editTextName"
        android:layout_alignLeft="@+id/editTextName"
        android:layout_alignStart="@+id/editTextName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unfriendly_text"
        android:id="@+id/random_button"
        android:background="#ff7d76ff"
        android:onClick="unfriendlyButtonClick"
        android:layout_below="@+id/ok_button"
        android:layout_alignLeft="@+id/ok_button"
        android:layout_alignStart="@+id/ok_button"
        android:layout_alignRight="@+id/ok_button"
        android:layout_alignEnd="@+id/ok_button" />

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ratingBar"
        android:onClick="onRatingClick"
        android:layout_below="@+id/random_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="93dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/rate_this_app"
        android:id="@+id/textView"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#ffffffff" />


</RelativeLayout>
